REF: friendConverter 간략화